# ivcap-client-sdk-python

./: .gitignore  404.html  AGENT.md  AGENTS.md  DESIGN.md  Makefile  README.md  SKILLS.md  config.yml  example.html  fix_auto_generated.py  genindex.html  index.html  llms-full.txt  llms.txt  objects.inv  openapi3.json  overview.html  patch_openapi.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml  tox.toml
.github/workflows/: ci-cd.yml  docs.yml  sphinx_docs_to_gh_pages.yaml
_modules/: index.html
_modules/ivcap_client/: artifact.html  aspect.html  errors.html  excpetions.html  ivcap.html  metadata.html  order.html  service.html  types.html  utils.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/ivcap_client/: index.rst.txt
agent/: index.html
api/artifact/: index.html
api/aspect/: index.html
api/collection/: index.html
api/exceptions/: index.html  index.md
api/ivcap/: index.html
api/service/: index.html  index.md
autoapi/: index.html
autoapi/ivcap_client/: index.html
autoapi/ivcap_client/artifact/: index.html
autoapi/ivcap_client/aspect/: index.html
autoapi/ivcap_client/errors/: index.html
autoapi/ivcap_client/excpetions/: index.html
autoapi/ivcap_client/ivcap/: index.html
autoapi/ivcap_client/order/: index.html
autoapi/ivcap_client/service/: index.html
autoapi/ivcap_client/types/: index.html
autoapi/ivcap_client/utils/: index.html
community/conduct/: index.html
community/contributing/: index.html
docs/: Makefile  README.md  conf.py  hooks.py  mkdocs.yml  requirements.txt
docs-to-deploy/: 404.html  index.html  llms-full.txt  llms.txt  objects.inv  search.html  sitemap.xml
docs-to-deploy/agent/: index.html
docs-to-deploy/api/artifact/: index.html  index.md
docs-to-deploy/api/aspect/: index.html
docs-to-deploy/api/exceptions/: index.html
docs-to-deploy/api/ivcap/: index.html
docs-to-deploy/api/job/: index.html
docs-to-deploy/api/overview/: index.html
docs-to-deploy/api/service/: index.html
docs-to-deploy/community/conduct/: index.html
docs-to-deploy/community/contributing/: index.html
docs-to-deploy/examples/artifacts/: index.html
docs-to-deploy/examples/aspects/: index.html
docs-to-deploy/examples/async-parallel/: index.html
docs-to-deploy/examples/collections/: index.html
docs-to-deploy/examples/jobs/: index.html  index.md
docs-to-deploy/examples/overview/: index.html
docs-to-deploy/examples/services/: index.html  index.md
docs-to-deploy/getting-started/authentication/: index.html
docs-to-deploy/getting-started/installation/: index.html
docs-to-deploy/getting-started/quick-start/: index.html
docs-to-deploy/guides/agents/: index.html
docs-to-deploy/guides/artifacts/: index.html  index.md
docs-to-deploy/guides/aspects/: index.html
docs-to-deploy/guides/async-usage/: index.html
docs-to-deploy/guides/error-handling/: index.html  index.md
docs-to-deploy/guides/jobs/: index.html
docs-to-deploy/guides/local-mode/: index.html
docs-to-deploy/guides/overview/: index.html
docs-to-deploy/guides/search/: index.html
docs-to-deploy/guides/services/: index.html
docs-to-deploy/search/: search_index.json
docs/docs/: agent.md  index.md
examples/: Makefile  _common.py  batch_stress_test.py  download_artifact.py  find_service_by_name.py  find_unique_gene.py  k8s.py  lambda_stress_test.py  list_artifacts.py  list_orders.py  list_secrets.py  list_services.py  locus_stress_test.py  manage_aspect.py  manage_collection.py  place_order.py  run_agent.py  run_async_job.py  run_go_mapper.py  search_aspect.py  search_metadata.py  test_failed_service.py  upload_artifact.py
examples/artifacts/: index.html
examples/async-parallel/: index.md
examples/collections/: index.html  index.md
examples/jobs/: index.html
examples/metric/: find-unique-gene-1752740461.csv
examples/services/: index.html
getting-started/authentication/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/agents/: index.html
guides/artifacts/: index.html  index.md
guides/aspects/: index.html
guides/async-usage/: index.html
guides/collections/: index.html  index.md
guides/error-handling/: index.html
guides/jobs/: index.html
guides/local-mode/: index.html
guides/overview/: index.html
guides/search/: index.html
guides/services/: index.html
ivcap_client/: __init__.py  agent.py  artifact.py  aspect.py  collection.py  errors.py  exception.py  ivcap.py  job.py  order.py  secret.py  service.py  types.py  utils.py
ivcap_client/client/: __init__.py  client.py
ivcap_client/models/: __init__.py  account_result.py  add_meta_rt.py  artifact_list_item.py  artifact_list_rt.py  artifact_status_rt.py  artifact_upload_rt.py  artifact_upload_rt2.py  aspect_idrt.py  aspect_list_item_rt.py  aspect_list_item_rt_content.py  aspect_list_rt.py  aspect_rt.py  aspect_rt_content.py  aspectcreate_body.py  aspectcreate_json_body.py  aspectupdate_body.py  aspectupdate_json_body.py  bad_request_t.py  createqueueresponse.py  dashboard_list_item.py  dashboard_list_rt.py  described_by_t.py  foo_t.py  h_ref_t.py  invalid_credentials_t.py  invalid_parameter_t.py  invalid_scopes_t.py  job_internal_error_t.py  job_list_item.py  job_list_rt.py  job_no_result_t.py  job_request_error_t.py  job_retry_later_t.py  job_retry_later_t2.py  job_status_rt.py  link_t.py  list_meta_rt.py  list_response_body.py  list_response_body_2.py  (+75 more)
reference/environment-variables/: index.html
reference/glossary/: index.html
search/: search_index.json
src/ivcap_client/: __init__.py  artifact.py  aspect.py  ivcap.py  metadata.py  order.py  service.py  types.py  utils.py
tests/: conftest.py  schema_with_defs.json  test_artifact.py  test_artifact_local.py  test_aspect_helpers.py  test_aspect_local.py  test_collection.py  test_config.py  test_errors.py  test_exception.py  test_http_list_operations.py  test_http_mocking_mocktransport.py  test_http_mocking_respx.py  test_ivcap_init.py  test_local_ivcap.py  test_utils.py  test_utils_json_schema.py
(+231 files in other folders)
