[tool.poetry]
name = "ivcap_client"
version = "0.47.9"
description = "A client library for accessing an IVCAP cluster"

authors = ["Max Ott <max.ott@csiro.au>",
            "openapi-python-client <https://github.com/openapi-generators/openapi-python-client>"]

readme = "README.md"

include = ["CHANGELOG.md", "ivcap_sdk_client/py.typed"]

[tool.poetry.dependencies]
#python = ">=3.10,<4.0"
python = ">=3.11,<4.0" # Version 8 of sphinx is required by version 3.1.0 of sphinx-rtd-theme, Sphinx requries python >= 3.11. Python 3.10 is in 'security fixes only' until October 2026.
httpx = ">=0.15.4,<0.29"
attrs = ">=21.3.0"
python-dateutil = ">=2.8.0,<2.9.0"
tuspy = ">=1.1.0"
frozenlist = ">=1.8.0"
packaging = ">=25.0"
yarl = ">=1.22.0"
aiohttp = ">=3.13.3,<4.0.0"
pydantic = ">=2.10,<3.0.0"

[tool.poetry.group.dev.dependencies]
openapi-python-client = ">=0.28.0"
pytest = "^7.1.3"
pytest-cov = "^4.1.0"
# Sphinx < 6.2.0 required imghdr which was a standard library
# module removed in python 3.13
#Sphinx = "^5.2.3"
#Sphinx = ">=6.1.0,<7.0"
#Sphinx = "^7.4.7"
Sphinx = "^8.2.3"
myst-nb = "^1.3.0"
autoapi = "^2.0.1"
#sphinx-autoapi = "^2.0.0"
sphinx-autoapi = "^3.6.1"
#sphinx-rtd-theme = "^1.0.0"
#sphinx-rtd-theme = "<2.0.0"
sphinx-rtd-theme = "^3.1.0"
licenseheaders = "^0.8.8"
mypy = "^1.16.0"
dotenv = "^0.9.9"
locust = "^2.39.0"
pyzmq = ">=27.1.0" # pyzmq is a dependency of locust, older versions wouldn't build with newer pythons
jsonschema = "^4.26.0" # needed by nbformat, which is needed by myst-nb, segfaults running earlier versions.
sqlalchemy = "^2.0.46"
gevent = "^25.5.1"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

